# franka-data-acquisition

./: .gitignore  LICENSE  README.md  cam_reader.py  main.py  record.py  replay.py  requirements.txt  run.py  tactile_sensor.py  testApi.py
OLD/: main.py
config/: tactile_settings.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_robot/share/my_robot/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/camera_pkg/: package.xml  setup.py
ros2_ws/src/camera_pkg/camera_pkg/: camera_node.py
ros2_ws/src/dataset_logger/: package.xml  setup.py
ros2_ws/src/dataset_logger/dataset_logger/: logger_node.py
ros2_ws/src/launch/: bringup.launch.py
ros2_ws/src/launch_pkg/: package.xml  setup.py
ros2_ws/src/launch_pkg/launch/: system_launch.py
ros2_ws/src/my_robot/: setup.py
ros2_ws/src/robot_state_pkg/: setup.py
ros2_ws/src/robot_state_pkg/robot_state_pkg/: state_node.py
ros2_ws/src/tactile_pkg/: package.xml  setup.py
ros2_ws/src/tactile_pkg/tactile_pkg/: tactile_node.py  tactile_sensor.py
src/: main.py
tests/: tactile_visualizer.py
