<?xml version="1.0"?>
<package format="3">
  <name>PACKAGE_NAME</name>
  <version>0.0.0</version>
  <description>ROS2 node</description>

  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
<exec_depend>message_filters</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>