<?xml version="1.0"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>Launch system</description>

  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>